--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
     <title>Photo now!</title>
   </head>
   <body>
+    <div id="root-alert"></div>
     <div id="root"></div>
   </body>
 </html>
